crates/splitter-cli/tests/snapshots/help_snapshots__help_send.snap
---
source: crates/splitter-cli/tests/help_snapshots.rs
expression: output
---
Capture audio from a local input device, encode with Opus, and
transmit UDP packets to the specified address. Runs until interrupted (Ctrl-C).

Use --source system to capture desktop/loopback audio instead of a microphone:
macOS  — route system output through BlackHole 2ch, then pass BlackHole as --input
Windows — WASAPI loopback is selected automatically when --source system is set
Linux   — pass a .monitor PulseAudio/PipeWire source as --input

Examples:
# Send microphone to a remote host
splitter-cli send --input "Built-in Microphone" --addr 192.168.1.50:5004

# Send system audio with FEC always on
splitter-cli send --input "BlackHole 2ch" --addr 10.0.0.2:5004 \
--source system --fec-mode always --bitrate 96000

Usage: splitter-cli send [OPTIONS] --input <INPUT> --addr <ADDR>

Options:
      --input <INPUT>
          

      --addr <ADDR>
          

      --stream-id <STREAM_ID>
          [default: 0]

      --bitrate <BITRATE>
          [default: 64000]

      --source <SOURCE>
          [default: mic]
          [possible values: mic, system]

      --fec-mode <FEC_MODE>
          [default: auto]
          [possible values: auto, always, never]

      --simulated-loss-pct <SIMULATED_LOSS_PCT>
          [default: 0]

  -h, --help
          Print help (see a summary with '-h')
